--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,20 @@ plugins {
     id 'kotlin-android'
     id 'checkPlugin'
     id 'uploadPlugin'
-    id "maven-publish"
     id 'uploadGithub'
 }
 
-check{
-    manifestWhiteFile="ManifestWhite.xml"
+check {
+    manifestWhiteFile = "ManifestWhite.xml"
 }
 
+upload {
+    groupId = "com.aa.bb"
+    artifactId = "haha"
+    version = "1.0.0"
+    hasPomDepend = true
+    url = "build/repo"
+}
 android {
     compileSdk 31
 
@@ -57,29 +63,3 @@ dependencies {
 
     implementation 'com.github.MRwangqi.MessageHook:hook:1.0.11'
 }
-
-//afterEvaluate {
-//    publishing {
-//        publications {
-//            // Creates a Maven publication called "release".
-//            release(MavenPublication) {
-//                from components.release
-//                groupId = 'com.codelang.jitpack'
-//                artifactId = 'hook'
-//                version = '1.0'
-//
-//                println("release ---- "+components.release)
-//            }
-//
-//            println("publications ---- "+it)
-//        }
-//
-//        println("publishing ---- "+it)
-//
-//        repositories {
-//            maven {
-//                url = "../build/repo"
-//            }
-//        }
-//    }
-//}
