--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 
 plugins {
     id "checkPlugin" apply false
-    id "uploadPlugin" apply false
+    id "uploadMaven" apply false
     id "uploadGithub" apply false
 }
 
