--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,9 @@ upload {
     groupId = "com.aa.bb"
     artifactId = "haha"
     version = "1.0.0"
-    githubURL = "git@github.com:MRwangqi/Maven.git"
-    githubBranch = "apk"
+    sourceJar = true
+//    githubURL = "git@github.com:MRwangqi/Maven.git"
+//    githubBranch = "apk"
 }
 android {
     compileSdk 31
