--- a/plugin/uploadPlugin/build.gradle
+++ b/plugin/uploadPlugin/build.gradle
@@ -42,7 +42,7 @@ afterEvaluate {
 
         repositories {
             maven {
-                url = uri(mavenLocal().url)
+                url = "../../build/Maven"
             }
         }
     }
