--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ buildscript {
         google()
         mavenCentral()
         mavenLocal()
+        maven {
+            allowInsecureProtocol = true
+            url "http://localhost:8081/repository/android/"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
@@ -15,6 +19,8 @@ buildscript {
 
 plugins {
     id "checkPlugin" apply false
+    id "uploadMaven" apply false
+    id "uploadGithub" apply false
 }
 
 task clean(type: Delete) {
