--- a/android-lib/build.gradle
+++ b/android-lib/build.gradle
@@ -1,24 +1,30 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
-    id 'checkPlugin'
+    id 'uploadGithub'
 }
 
-check{
-    manifestWhiteFile="ManifestWhite.xml"
+upload {
+    groupId = "com.codelang.library"
+    artifactId = "android_lib"
+    version = "1.0.3"
+
+//    nexusURL = "http://localhost:8081/repository/android/"
+//    nexusName = "admin"
+//    nexusPsw = "admin"
 }
 
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.codelang.includebuildingdemo"
         minSdk 21
         targetSdk 31
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -34,23 +40,24 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar","*.aar"])
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //3D地图so及jar
-    implementation 'com.amap.api:3dmap:latest.integration'
-    implementation 'com.amap.api:location:latest.integration'
-
-    implementation 'com.github.MRwangqi.MessageHook:hook:1.0.11'
-
+    implementation project(":java-lib")
 }
