feature:aar 与 module 替换

--- a/plugin/settings.gradle
+++ b/plugin/settings.gradle
@@ -8,3 +8,4 @@ dependencyResolutionManagement {
 rootProject.name = "plugin"
 include ':checkPlugin'
 include ':uploadPlugin'
+include ':modulePlugin'
