--- a/android-lib/build.gradle
+++ b/android-lib/build.gradle
@@ -1,13 +1,13 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-    id 'uploadMaven'
+    id 'uploadGithub'
 }
 
 upload {
     groupId = "com.codelang.library"
-    artifactId = "android_lib"
-    version = "1.0.6"
+    artifactId = "android-lib"
+    version = "1.0.0"
 }
 
 android {
@@ -55,5 +55,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation project(":java-lib")
+//    implementation project(":java-lib")
 }
