--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'checkPlugin'
+    id 'modulePlugin'
 }
 
 check{
@@ -36,6 +37,19 @@ android {
     }
 }
 
+android {
+    flavorDimensions "platform"
+
+    productFlavors {
+        xiaomi {
+            dimension "platform"
+        }
+        oppo {
+            dimension "oppo"
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar","*.aar"])
 
@@ -52,5 +66,10 @@ dependencies {
     implementation 'com.amap.api:location:latest.integration'
 
     implementation 'com.github.MRwangqi.MessageHook:hook:1.0.11'
+
+
+    //todo 模拟被替换成本地的 aar
+    implementation ("com.codelang.library:android-lib:1.0.0")
+
 
 }
