--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ buildscript {
             allowInsecureProtocol = true
             url "http://localhost:8081/repository/android/"
         }
+        maven{
+            url "https://raw.githubusercontent.com/MRwangqi/Maven/main"
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
@@ -21,6 +24,7 @@ plugins {
     id "checkPlugin" apply false
     id "uploadMaven" apply false
     id "uploadGithub" apply false
+    id "modulePlugin" apply false
 }
 
 task clean(type: Delete) {
