--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,8 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=obsolete
 android.nonTransitiveRClass=true
+
+# GAV 转本地 module 开关
+gav2project.enable=true
+# 如果指定跳过模块，则不会参与 GAV 到 Project 的转换(仅在 gav2project.enable=true 时生效)
+gav2project.skips=android-lib
