--- a/plugin/modulePlugin/build.gradle
+++ b/plugin/modulePlugin/build.gradle
@@ -37,7 +37,7 @@ afterEvaluate {
 
         repositories {
             maven {
-                url = uri(mavenLocal().url)
+                url = "../../build/Maven"
             }
         }
     }
