--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar","*.aar"])
+//    implementation fileTree(dir: "libs", include: ["*.jar","*.aar"])
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -52,11 +52,11 @@ dependencies {
     implementation 'com.amap.api:3dmap:latest.integration'
     implementation 'com.amap.api:location:latest.integration'
 
-    implementation 'com.github.MRwangqi.MessageHook:hook:1.0.11'
+//    implementation 'com.github.MRwangqi.MessageHook:hook:1.0.11'
 
 
     //todo 模拟被替换成本地的 aar
-    implementation ("com.codelang.library:android-lib:1.0.0")
+//    implementation ("com.codelang.library:android-lib:1.0.0")
 
 
 }
