--- a/plugin/TracePlugin/build.gradle
+++ b/plugin/TracePlugin/build.gradle
@@ -9,13 +9,21 @@ dependencies {
     api "com.android.tools.build:gradle-api:$apgVersion"
     api "com.android.tools.build:gradle:$apgVersion"
     implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+
+    compileOnly "commons-io:commons-io:2.6"
+    compileOnly "commons-codec:commons-codec:1.15"
+    compileOnly "org.ow2.asm:asm-commons:9.2"
+    compileOnly "org.ow2.asm:asm-tree:9.2"
 }
+
+version = "1.0.0"
+group = "com.github.MRwangqi"
 
 gradlePlugin {
     plugins {
         version {
-            id = 'checkPlugin'
-            implementationClass = 'com.codelang.plugin.CheckPlugin'
+            id = 'TracePlugin'
+            implementationClass = 'com.codelang.plugin.TracePlugin'
         }
     }
 }
@@ -27,14 +35,14 @@ afterEvaluate {
             maven(MavenPublication) {
                 from components.java
                 groupId = "com.github.MRwangqi"
-                artifactId = "checkPlugin"
-                version = "1.0.1"
+                artifactId = "TracePlugin"
+                version = "1.0.0"
             }
         }
 
         repositories {
             maven {
-                url = uri(mavenLocal().url)
+                url = "../../build/Maven"
             }
         }
     }
