--- a/plugin/gradle.properties
+++ b/plugin/gradle.properties
@@ -21,5 +21,6 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 apgVersion=7.0.0
+kotlinVersion=1.5.30
 
 org.gradle.jvmargs=-XX:MaxPermSize=4g -XX:+HeapDumpOnOutOfMemoryError -Xmx4g -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006
