--- a/plugin/modulePlugin/build.gradle
+++ b/plugin/modulePlugin/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     implementation localGroovy()
     api "com.android.tools.build:gradle-api:$apgVersion"
     api "com.android.tools.build:gradle:$apgVersion"
-    implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+    implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 }
 
 version = "1.0.0"
