--- a/plugin/uploadPlugin/build.gradle
+++ b/plugin/uploadPlugin/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     implementation localGroovy()
     api "com.android.tools.build:gradle-api:$apgVersion"
     api "com.android.tools.build:gradle:$apgVersion"
-    implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+    implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '6.1.0.202203080745-r'
 
 }
