--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ plugins {
     id "uploadMaven" apply false
     id "uploadGithub" apply false
     id "modulePlugin" apply false
-    id "TracePlugin" apply false
+    id "resourcePlugin" apply false
 }
 
 task clean(type: Delete) {
