--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,4 @@ android.nonTransitiveRClass=true
 # GAV 转本地 module 开关
 gav2project.enable=true
 # 如果指定跳过模块，则不会参与 GAV 到 Project 的转换(仅在 gav2project.enable=true 时生效)
-gav2project.skips=android-lib
+#gav2project.skips=android-lib
