Feature/resource plugin (#4)
* tracePlugin init:

* mod:resourcePlugin 检查资源冲突

* mod:Drawable 资源重复检查

* mod:drawable 资源重复

* mod:assets 资源重复

* 更新 README

Co-authored-by: 汪奇 <qi.wang@tuya.com>

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ plugins {
     id "uploadMaven" apply false
     id "uploadGithub" apply false
     id "modulePlugin" apply false
+    id "resourcePlugin" apply false
 }
 
 task clean(type: Delete) {
