--- a/plugin/ResourcePlugin/build.gradle
+++ b/plugin/ResourcePlugin/build.gradle
@@ -11,11 +11,14 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 }
 
+version = "1.0.0"
+group = "com.github.MRwangqi"
+
 gradlePlugin {
     plugins {
         version {
-            id = 'checkPlugin'
-            implementationClass = 'com.codelang.plugin.CheckPlugin'
+            id = 'resourcePlugin'
+            implementationClass = 'com.codelang.plugin.ResourcePlugin'
         }
     }
 }
@@ -27,14 +30,14 @@ afterEvaluate {
             maven(MavenPublication) {
                 from components.java
                 groupId = "com.github.MRwangqi"
-                artifactId = "checkPlugin"
-                version = "1.0.1"
+                artifactId = "resourcePlugin"
+                version = "1.0.0"
             }
         }
 
         repositories {
             maven {
-                url = uri(mavenLocal().url)
+                url = "../../build/Maven"
             }
         }
     }
