mod:增加 gradle file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ plugins {
     id 'resourcePlugin'
 }
 
+//apply from :"resourcePlugin.gradle"
+
 check {
     manifestWhiteFile = "ManifestWhite.xml"
 }
