--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'modulePlugin'
     id 'resourcePlugin'
     id 'permissionPlugin'
+    id 'classParsePlugin'
 }
 
 //apply from :"../plugin/resourcePlugin/resourcePlugin.gradle"
