--- a/plugin/settings.gradle
+++ b/plugin/settings.gradle
@@ -10,4 +10,4 @@ include ':uploadPlugin'
 include ':modulePlugin'
 include ':resourcePlugin'
 include ':permissionPlugin'
-include ':classParse'
+include ':classAnalysis'
