--- a/plugin/classAnalysis/build.gradle
+++ b/plugin/classAnalysis/build.gradle
@@ -20,7 +20,7 @@ gradlePlugin {
         }
     }
 }
-
+version="1.0.0"
 
 afterEvaluate {
     publishing {
@@ -28,14 +28,14 @@ afterEvaluate {
             maven(MavenPublication) {
                 from components.java
                 groupId = "com.github.MRwangqi"
-                artifactId = "classPlugin"
-                version = "1.0.1"
+                artifactId = "classAnalysis"
+                version = "1.0.0"
             }
         }
 
         repositories {
             maven {
-                url = uri(mavenLocal().url)
+                url = uri("../../build/Maven")
             }
         }
     }
