--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+//        classpath "com.github.MRwangqi:classAnalysis:1.0.0"
     }
 }
 
@@ -27,6 +28,8 @@ plugins {
     id "modulePlugin" apply false
     id "resourcePlugin" apply false
     id "permissionPlugin" apply false
+    id "classAnalysisPlugin" apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.6.21' apply false
 }
 
 task clean(type: Delete) {
